@@ -5,6 +5,9 @@ Changes for crash
 Unreleased
 ==========
 
+ - Fixed an issue where BACKSPACE would delete more characters before the
+   cursor than expected.
+
  - Added support for pasting and executing multiple statements at once.
 
  - Added back support for multiline table headers
